# dnsresolver

./: Cargo.toml  LICENSE  README.md  resolvers.txt  subs.txt
src/: main.rs
src/resolver/: mod.rs
src/waf/: mod.rs
